discoverBreed fixed alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  @font-face {
+    font-family: 'Montserrat';
+    src: url(/fonts/Montserrat-VariableFont_wght) format('ttf');
+  }
+  @font-face {
+    font-family: 'Montserrat';
+    src: url(/fonts/Montserrat-Italic-VariableFont_wght) format('ttf');
+    font-style: italic;
+  }
+  html {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  }
+}
